--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,14 +2,16 @@
 {
     text-decoration: none;
     color: var(--text-color);
-    background-color: var(--bg-color);
-    border-radius: 8px;
+    padding: 0;
+    margin: 0;
+
+    border-bottom: 1px #dedede solid;
 
     transition: .3s;
 }
 
 .header--nav-link:hover,
 .header--nav-link:focus {
-    background-color: var(--bg-light-hover);
+    border-bottom: 1px #555 solid;
     color: var(--text-color);
 }
