--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2,3 +2,8 @@ body {
     /* color: var(--bg-color); */
     background-image: url('/img/content/background.png');
 }
+
+.icon-invert
+{
+    fill: var(--active) !important;
+}
