--- a/src/css/static/dark.css
+++ b/src/css/static/dark.css
@@ -19,5 +19,7 @@
     --bg-light: #353535;
     --bg-light-hover: #424242;
     --bs-btn-close-color: #ddd;
-    --bs-btn-close-white-filter--me: invert(1) grayscale(100%) brightness(200%)
+    --bs-btn-close-white-filter--me: invert(1) grayscale(100%) brightness(200%);
+
+    --bg-image: url('/img/content/bg-dark-1.jpg');
 }
