--- a/src/css/static/dark.css
+++ b/src/css/static/dark.css
@@ -22,4 +22,6 @@
     --bs-btn-close-white-filter--me: invert(1) grayscale(100%) brightness(200%);
 
     --bg-image: url('/img/content/bg-dark-1.jpg');
+    --text-dark: #111;
+    --text-light: #eee;
 }
