--- a/src/css/main-cards.css
+++ b/src/css/main-cards.css
@@ -4,7 +4,7 @@
     background-size: cover;
     background-position: center center;
 
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 @media(min-width: 992px) {
@@ -14,24 +14,48 @@
     }
 }
 
-.main--card:hover {
+.main--card-1:hover {
     background-size: 105%;
 }
 
-.main--main-card-in {
+.main--card-2:hover {
+    background-size: 110%;
+}
+
+.main--card-3:hover {
+    background-size: 170%;
+}
+
+.card-in--1 {
     padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 50px;
+}
+
+.card-in--2 {
+    padding-left: 45px;
     padding-right: 100px;
     padding-bottom: 30px;
 }
 
-.main--main-card-out {
-    padding-top: 400px;
+.card--out {
     border-radius: 8px;
-
     backdrop-filter: brightness(0.8);
     background: linear-gradient(-180deg, transparent, rgba(0, 0, 0, .65));
-
     transition: .3s;
+}
+
+.card--out:hover {
+    backdrop-filter: brightness(1);
+    background: linear-gradient(-180deg, transparent, rgba(0, 0, 0, .6));
+}
+
+.card--out-1 {
+    padding-top: 400px;
+}
+
+.card--out-2 {
+    padding-top: 200px;
 }
 
 .main--card-link
@@ -45,10 +69,4 @@
 .main--card-link
 {
     text-shadow: .5rem .5rem 1rem rgba(var(--bs-body-color-rgb), .35);
-}
-
-.main--main-card-out:hover
-{
-    backdrop-filter: brightness(1);
-    background: linear-gradient(-180deg, transparent, rgba(0, 0, 0, .6));
 }
