--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 .footer--main {
     margin-top: 50px;
-    padding-bottom: 30px;
+    padding-bottom: 10px;
     backdrop-filter: blur(0.1rem);
 }
 
@@ -13,4 +13,24 @@
 .footer--icon-link:hover
 .footer-icon {
     fill: var(--text-hover);
+}
+
+.footer--more
+{
+    font-size: 13px;
+    text-decoration: none;
+    margin-bottom: 0;
+    margin-right: 8px;
+    margin-left: 8px;
+    padding: 0;
+}
+
+.footer--more-link {
+    color: var(--text-hover);
+    border-bottom: 1px #d9d9d9 solid;
+}
+
+.footer--more-link:hover {
+    color: var(--text-hover-1);
+    border-bottom: 1px #d9d9d9 solid;
 }
