--- a/src/css/header--adaptive.css
+++ b/src/css/header--adaptive.css
@@ -5,7 +5,7 @@
 }
 
 @media(min-width: 883px) {
-    .header--adaptive-more{
+    .header--adaptive-more {
         display: none !important;
     }
 }
@@ -13,5 +13,17 @@
 @media(max-width: 490px) {
     .header--adaptive-best {
         display: none !important;
+    }
+}
+
+@media(max-width: 539px) {
+    .header--logo-pc {
+        display: none;
+    }
+}
+
+@media(min-width: 540px) {
+    .header--logo-mobile {
+        display: none;
     }
 }
