--- a/src/css/images.css
+++ b/src/css/images.css
@@ -1,3 +1,11 @@
 img {
     user-select: none;
 }
+
+.img--desc
+{
+    font-size: 17px;
+    text-align: center;
+    padding-top: 3px;
+    font-family: NotoSans-Light;
+}
