--- a/src/css/static/light.css
+++ b/src/css/static/light.css
@@ -11,12 +11,15 @@
     --text-hover-3: #111;
     --text-hover-4: #ddd;
     --text-hover-5: #777;
+
     --btn-light-color: #f4f4f4;
     --btn-light-hover: #d1d1d1;
     --btn-light-click: #979797;
-    --btn-dark-color: #4a4a4a;
-    --btn-dark-hover: #7e7e7e;
+
+    --btn-dark-color: #1c1c1c;
+    --btn-dark-hover: #525252;
     --btn-dark-click: #212121;
+
     --bs-border-color: #ddd;
     --bg-light: #f8f9fa;
     --bg-light-hover: #e7e9eb;
