--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -35,3 +35,13 @@
     color: var(--text-hover-1);
     border-bottom: 1px #d9d9d9 solid;
 }
+
+.footer--text-invert
+{
+    color: var(--text-color);
+}
+
+.footer--change-theme
+{
+    background-color: var(--bg-color);
+}
