--- a/src/css/header.css
+++ b/src/css/header.css
@@ -49,3 +49,25 @@
 {
     margin-right: 190px;
 }
+
+.header--logo{
+    width: 240px;
+}
+
+@media(max-width: 660px) and (min-width: 540px) {
+    .header--logo {
+        width: 200px;
+    }
+}
+
+@media(max-width: 539px) {
+    .header--logo {
+        width: 140px;
+    }
+}
+
+@media(max-width: 500px) {
+    .header--logo-margin{
+        margin-right: 20px;
+    }
+}
