--- a/src/css/images.css
+++ b/src/css/images.css
@@ -5,6 +5,7 @@ img {
 .img--desc
 {
     font-size: 17px;
+    color: var(--text-color);
     text-align: center;
     padding-top: 3px;
     font-family: NotoSans-Light;
