work at view post

--- a/src/css/static/dark.css
+++ b/src/css/static/dark.css
@@ -33,4 +33,6 @@
     --nav-link-hover: #555;
     --nav-link-active: #dedede;
     --text-muted: #9f9f9f;
+
+    --bs-border-color: #555 !important;
 }
