--- a/src/css/static/light.css
+++ b/src/css/static/light.css
@@ -33,4 +33,6 @@
     --nav-link-hover: #ddd;
     --nav-link-active: #555;
     --text-muted: #898989;
+
+    --bs-border-color: #ddd !important;
 }
