work at new blocks

--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -14,3 +14,34 @@
 {
     border-radius: 8px;
 }
+
+.card--title {
+    font-family: Unbounded;
+}
+
+.card--title-1
+{
+    font-size: 2.5rem;
+    margin-bottom: 10px !important;
+    margin-left: 20px !important;
+}
+
+.card--title-2 {
+    font-size: 1.5rem;
+    margin-bottom: 5px !important;
+    margin-left: 10px !important;
+}
+
+@media(max-width: 991px) {
+    .card--title-1 {
+        font-size: 1.5rem;
+        margin-bottom: 10px !important;
+        margin-left: 20px !important;
+    }
+
+    .card--title-2 {
+        font-size: 1.5rem;
+        margin-bottom: 5px !important;
+        margin-left: 10px !important;
+    }
+}
