--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -24,12 +24,14 @@
     font-size: 2.5rem;
     margin-bottom: 10px !important;
     margin-left: 20px !important;
+    margin-right: 20px !important;
 }
 
 .card--title-2 {
     font-size: 1.5rem;
     margin-bottom: 5px !important;
     margin-left: 10px !important;
+    margin-right: 10px !important;
 }
 
 @media(max-width: 991px) {
@@ -37,11 +39,13 @@
         font-size: 1.5rem;
         margin-bottom: 10px !important;
         margin-left: 20px !important;
+        margin-right: 20px !important;
     }
 
     .card--title-2 {
         font-size: 1.5rem;
         margin-bottom: 5px !important;
         margin-left: 10px !important;
+        margin-right: 10px !important;
     }
 }
