--- a/src/css/images.css
+++ b/src/css/images.css
@@ -8,5 +8,5 @@ img {
     color: var(--text-muted);
     text-align: center;
     padding-top: 3px;
-    font-family: NotoSans-Light;
+    font-family: NotoSans-Light !important;
 }
