work at adaptive

--- a/src/css/header--adaptive.css
+++ b/src/css/header--adaptive.css
@@ -11,7 +11,7 @@
 }
 
 @media(max-width: 812px) {
-    .header--adaptive-best {
+    .header--adaptive-button {
         display: none !important;
     }
 }
