--- a/src/css/static/light.css
+++ b/src/css/static/light.css
@@ -12,7 +12,7 @@
     --text-hover-4: #ddd;
     --text-hover-5: #777;
 
-    --btn-light-color: #f4f4f4;
+    --btn-light-color: #efefef;
     --btn-light-hover: #d1d1d1;
     --btn-light-click: #979797;
 
