--- a/src/css/app.css
+++ b/src/css/app.css
@@ -15,3 +15,18 @@ h1,h2,h3,h4,h5,h6,
 .h1,.h2,.h3,.h4,.h5,.h6, p, div, span, i, b {
     color: var(--text-color);
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+    letter-spacing: -0.7px;
+}
