--- a/src/css/header.css
+++ b/src/css/header.css
@@ -54,9 +54,10 @@
     width: 240px;
 }
 
-@media(max-width: 500px) {
+@media(max-width: 864px) {
     .header--logo-margin {
-        margin-right: 20px;
+        margin-right: 0px;
+        display: flex !important;
     }
 }
 
@@ -76,4 +77,10 @@
     .header--logo {
         width: 100px;
     }
+}
+
+.header--button
+{
+    padding: 9px 33px !important;
+    border-radius: 12px !important;
 }
