--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -1,4 +1,5 @@
 .card--bg-gradient {
+    border-radius: 1 !important;
     background: linear-gradient(-180deg, transparent, rgba(0, 0, 0, .65));
 }
 
