--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,16 @@
-.header--main {
-    margin-bottom: 30px;
+.nav--main {
+    padding-bottom: 15px;
+}
+
+.header--backdrop {
     backdrop-filter: blur(0.3rem);
+    margin-bottom: 30px;
+}
+
+.header--main {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 5px;
 }
 
 .header--nav-link
