--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -48,13 +48,21 @@
 .footer--more-link {
     color: var(--text-hover);
     border: 0;
-    border-bottom: 1px #d9d9d9 solid !important;
+    border-bottom: 1.5px var(--text-hover) solid;
+    background: none;
+    transition: background-color .2s;
     text-decoration: none;
 }
 
 .footer--more-link:hover {
-    color: var(--text-hover-1);
-    border-bottom: 1px #d9d9d9 solid;
+    color: var(--text-color);
+    border-bottom: 0px var(--text-hover-1) solid;
+    background-color: var(--link-bg-color);
+}
+
+.footer--more-link:focus {
+    color: var(--text-color);
+    border-bottom: 0px var(--text-hover-1) solid;
 }
 
 .footer--text-invert
