--- a/src/css/footer-adaptive.css
+++ b/src/css/footer-adaptive.css
@@ -11,3 +11,10 @@
         width: 100%;
     }
 }
+
+@media(max-width: 1000px) {
+
+    .footer--adaptive-nav {
+        display: none !important;
+    }
+}
