--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -48,10 +48,9 @@
 .footer--more-link {
     color: var(--text-hover);
     border: 0;
-    border-bottom: 1.5px var(--text-hover) solid;
+    border-bottom: 2.5px var(--nav-link-hover) solid;
     background: none;
     transition: background-color .2s;
-    text-decoration: none;
 }
 
 .footer--more-link:hover {
