--- a/src/css/post.css
+++ b/src/css/post.css
@@ -25,8 +25,9 @@
 
 .main--post
 {
-    margin-top: 35px;
-    padding-top: 15px;
+    margin-top: 0px;
+    padding-top: 0px;
+    /* padding-top: 15px; */
 }
 
 .post--more
