--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,7 +1,7 @@
 .nav--main {
     padding-bottom: 13px;
     padding-top: 5px;
-    /* margin-bottom: 30px; */
+    margin-bottom: 30px;
 }
 
 .header--backdrop {
