--- a/src/css/static/page--new.css
+++ b/src/css/static/page--new.css
@@ -5,10 +5,18 @@
 
 .post--bg-image-block
 {
-    padding: 270px 0px 230px 0px;
+    padding: 270px 0px 0 0px;
     padding-left: 50px;
     max-width: 700px;
     background: linear-gradient(-90deg, transparent, rgba(0, 0, 0, .85));
+}
+
+.post--bg-image-top {
+    padding-bottom: 195px;
+}
+
+.post--bg-image-bottom {
+    padding-bottom: 20px;
 }
 
 .post--bg-image-block h1 {
