--- a/src/css/static/page.css
+++ b/src/css/static/page.css
@@ -100,3 +100,32 @@ img {
 .button--download-game {
     border-radius: 40px;
 }
+
+
+.post--bg-image {
+    background-size: cover;
+    margin-bottom: 30px;
+}
+
+.post--bg-image-block {
+    padding: 270px 0px 0 0px;
+    padding-left: 50px;
+    max-width: 700px;
+    background: linear-gradient(-90deg, transparent, rgba(0, 0, 0, .85));
+}
+
+.post--bg-image-top {
+    padding-bottom: 195px;
+}
+
+.post--bg-image-bottom {
+    padding-bottom: 20px;
+}
+
+.post--bg-image-block h1 {
+    color: white;
+}
+
+.post--bg-image-block .post--start-p {
+    color: rgba(255, 255, 255, .7) !important;
+}
