--- a/src/css/button.css
+++ b/src/css/button.css
@@ -22,11 +22,11 @@
     --bs-btn-bg: rgba(255, 255, 255, .5);
     --bs-btn-border-color: rgba(255, 255, 255, .3);
 
-    --bs-btn-hover-color: var(--active);
-    --bs-btn-hover-bg: var(--btn-light-hover);
-    --bs-btn-hover-border-color: var(--btn-light-hover);
-    --bs-btn-active-bg: var(--btn-light-click);
-    --bs-btn-active-border-color: var(--btn-light-hover);
+    --bs-btn-hover-color: #000;
+    --bs-btn-hover-bg: #565656;
+    --bs-btn-hover-border-color: #565656;
+    --bs-btn-active-bg: #7B7B7B;
+    --bs-btn-active-border-color: #565656;
 }
 
 .btn-dark {
