--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,7 +5,6 @@
 }
 
 .header--backdrop {
-    /* backdrop-filter: blur(2rem); */
     background-color: rgba(255,255,255, .0125) !important;
     backdrop-filter: blur(15px);
 }
@@ -41,6 +40,33 @@
 .header--nav-link:focus {
     color: var(--text-color);
     border-bottom: 0px var(--nav-link-active) solid;
+}
+
+.header--nav-link-white {
+    color: var(--text-color);
+    padding: 0;
+    margin: 0;
+
+    border-bottom: 0px #a9a9a9 solid;
+    text-decoration: underline;
+    text-underline-offset: .25rem;
+    text-decoration-style: solid;
+    text-decoration-color: #a9a9a9;
+
+    transition-property: border-bottom;
+    transition: background-color .2s;
+}
+
+.header--nav-link-white:hover {
+    border-bottom: 0px #ccc solid;
+    text-decoration: none;
+    background-color: rgba(255, 255, 255, .35);
+    color: #ccc;
+}
+
+.header--nav-link-white:focus {
+    color: #ccc;
+    border-bottom: 0px #ccc solid;
 }
 
 .header--best-p
