--- a/src/css/static/page.css
+++ b/src/css/static/page.css
@@ -65,38 +65,6 @@ img {
     font-size: 16px;
 }
 
-@media(max-width: 994px) {
-    .post--font-size-d1 h1 {
-        font-size: 32px;
-    }
-
-    .post--font-size-u1 h1 {
-        font-size: 37px;
-    }
-
-    .post--font-size-u2 h1 {
-        font-size: 43px;
-    }
-}
-
-@media(max-width: 400px) {
-    .post--font-size-d1 h1 {
-        font-size: 25px;
-    }
-
-    .post--font-size-d2 h1 {
-        font-size: 22px;
-    }
-
-    .post--font-size-u1 h1 {
-        font-size: 30px;
-    }
-
-    .post--font-size-u2 h1 {
-        font-size: 32px;
-    }
-}
-
 .button--download-game {
     border-radius: 40px;
 }
@@ -109,7 +77,7 @@ img {
 }
 
 .post--bg-image-block {
-    padding: 270px 0px 0 0px;
+    padding: 150px 0px 0 0px;
     padding-left: 50px;
     max-width: 700px;
     background: linear-gradient(-90deg, transparent, rgba(0, 0, 0, .85));
@@ -138,4 +106,63 @@ img {
 
 .subhead--static-font {
     font-size: 25px !important;
+}
+
+/* MEDIA */
+
+@media(max-width: 994px) {
+    .post--font-size-d1 h1 {
+        font-size: 32px;
+    }
+
+    .post--font-size-u1 h1 {
+        font-size: 37px;
+    }
+
+    .post--font-size-u2 h1 {
+        font-size: 43px;
+    }
+
+    .post--bg-image-block {
+        padding: 120px 0px 0 0px;
+        padding-left: 50px;
+        max-width: 600px;
+        background: linear-gradient(-90deg, transparent, rgba(0, 0, 0, .85));
+    }
+
+    .head--static-font {
+        font-size: 37px !important;
+    }
+
+    .subhead--static-font {
+        font-size: 20px !important;
+    }
+
+    .post--bg-image-top {
+        padding-bottom: 30px;
+    }
+}
+
+@media(max-width: 450px) {
+    .subhead--static-font {
+        font-size: 16px !important;
+    }
+}
+
+@media(max-width: 400px) {
+    .post--font-size-d1 h1 {
+        font-size: 25px;
+    }
+
+    .post--font-size-d2 h1 {
+        font-size: 22px;
+    }
+
+    .post--font-size-u1 h1 {
+        font-size: 30px;
+    }
+
+    .post--font-size-u2 h1 {
+        font-size: 32px;
+    }
 }
