--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: MenorahGrotesk;
+    font-family: HalvarBreit;
     font-style: normal;
-    src: url("/fonts/MenorahGrotesk-Bold.woff2") format("woff2");
+    src: url("/fonts/HalvarBreit.woff2") format("woff2");
 }
 
 @font-face {
@@ -28,7 +28,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-    font-family: MenorahGrotesk;
+    font-family: HalvarBreit;
 }
 
 p,
