--- a/src/css/header.css
+++ b/src/css/header.css
@@ -5,7 +5,7 @@
 }
 
 .header--backdrop {
-    background-color: rgba(255,255,255, .0125) !important;
+    /* background-color: rgba(255,255,255, .0125) !important; */
     backdrop-filter: blur(15px);
 }
 
