--- a/src/css/app.css
+++ b/src/css/app.css
@@ -45,3 +45,9 @@ h6,
 {
     border-radius: 1rem !important;
 }
+
+.fontsizeedit
+{
+    color: var(--text-hover);
+    font-size: 16px !important;
+}
