--- a/src/css/links.css
+++ b/src/css/links.css
@@ -56,3 +56,15 @@
     color: var(--text-color);
     fill: var(--text-color);
 }
+
+.link-icon--white {
+    color: var(--text-hover);
+    fill: var(--text-hover);
+    transition: .3s;
+}
+
+.link-icon--white:hover,
+.link-icon--white:focus {
+    color: #fff;
+    fill: #fff;
+}
