--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,8 +10,15 @@
 }
 
 .header--main {
-    padding-top: 15px;
+    padding-top: 20px;
     padding-bottom: 5px;
+}
+
+@media(max-width: 800px) {
+    .header--main {
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
 }
 
 .header--nav-link
