--- a/src/css/container.css
+++ b/src/css/container.css
@@ -43,6 +43,7 @@
     margin-top: 50px;
     background-color: var(--bg-more-block);
     padding: 15px;
-    border-radius: 12px;
-    padding-top: 30px;
+    border-radius: 25px;
+    padding-top: 45px;
+    padding-bottom: 25px;
 }
