--- a/src/css/header-mobile.css
+++ b/src/css/header-mobile.css
@@ -1,30 +1,33 @@
 .header--mobile-item {
-    background-color: var(--btn-light-color);
+    background-color: var(--header-mobile-button-bg);
     text-decoration: none;
     color: var(--text-color);
     padding: 15px;
     padding-left: 25px;
-    border-radius: 8px;
-    margin-bottom: 20px;
+    border-radius: 14px;
+    margin-bottom: 15px;
 }
 
 .header--mobile-more {
+    background-color: var(--header-mobile-button-bg-2);
     text-decoration: none;
     color: var(--text-color);
-    padding: 5px;
+    padding: 15px;
     padding-left: 25px;
-    margin-bottom: 10px;
+    border-radius: 14px;
+    margin-bottom: 15px;
 }
 
-.header--mobile-text {
+.header--more-text{
     text-decoration: none;
-    color: var(--text-hover);
+    color: var(--header-more-text);
     padding: 5px;
     padding-left: 25px;
 }
 
 .canvas-bg {
-    background-color: var(--bg-color);
+    background-color: var(--bg-color-rgba);
+    backdrop-filter: blur(45px);
 }
 
 .header--mobile-last-item {
