--- a/src/css/static/light.css
+++ b/src/css/static/light.css
@@ -1,5 +1,6 @@
 :root {
     --bg-color: #fff;
+    --bg-color-rgba: rgba(255,255,255, .63);
     --bg-color-invert: #262323;
     --text-color: #111;
     --text-color-invert: #fff;
@@ -39,4 +40,8 @@
 
     --link-bg-color: rgba(0, 0, 0, 0.25);
     --bg-more-block: #eee;
+
+    --header-more-text: #5f5f5f;
+    --header-mobile-button-bg: rgba(255,255,255, .87);
+    --header-mobile-button-bg-2: rgba(255, 255, 255, .2);
 }
