--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -1,6 +1,13 @@
 .card--bg-gradient {
-    border-radius: 1 !important;
-    background: linear-gradient(-180deg, transparent, rgba(0, 0, 0, .65));
+    background: rgb(0, 0, 0);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0.3) 60%, rgba(0, 0, 0, 0) 100%);
+}
+
+@media(max-width: 767px) {
+    .card--bg-gradient {
+        background: rgb(0, 0, 0);
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0.5) 60%, rgba(0, 0, 0, 0) 100%);
+    }
 }
 
 .card--link {
