--- a/src/css/static/page.css
+++ b/src/css/static/page.css
@@ -84,6 +84,7 @@ img {
 .post--bg-content {
     padding: 130px 0px 0 0px;
     padding-left: 50px;
+    padding-right: 20px;
     max-width: 700px;
 }
 
@@ -148,15 +149,23 @@ img {
     }
 }
 
+@media(max-width: 570px) {
+    .head--static-font {
+        font-size: 32px !important;
+    }
+
+    .post--bg-content {
+        padding: 120px 0px 0 20px;
+        padding-right: 20px;
+        max-width: 100%;
+    }
+}
+
 @media(max-width: 450px) {
     .subhead--static-font {
         font-size: 16px !important;
     }
 
-    .post--bg-content {
-        padding: 120px 0px 0 20px;
-        max-width: 100%;
-    }
 }
 
 @media(max-width: 400px) {
